# ai-assistant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
src/: assistant.py  calendar_service.py  config.py  database.py  google_auth.py  knowledge_base.py  logging_utils.py  scheduler.py  telegram_bot.py  tools.py  web_tools.py
src/integrations/: calendar.py  google_auth.py
